<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="202dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_temperature" />

        <Button
            android:id="@+id/button_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_length" />

        <Button
            android:id="@+id/button_temperature_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_weight" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>