<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Weight">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_weight"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/temperature_spinner_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_weight_1" />

        <Button
            android:id="@+id/button_temperature_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_weight_convert" />

        <EditText
            android:id="@+id/output_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/output_weight"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/temperature_spinner_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_weight_2" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>